--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 										<ul class="navigation">
 										    <li class="active" ><a href="index.html">HOME</a></li>
 											<li><a href="publication.html">PUBLICATION</a></li>
-											<li><a href="blog.html">BLOG</a></li>
+											<li><a href="bloog.html">BLOG</a></li>
 											<li class="last" ><a href="contact.html">CONTACT</a></li>
 										</ul>
 										
