--- a/contact.html
+++ b/contact.html
@@ -49,10 +49,10 @@
 											    <ul>
 													<li>
 															<p>
-																<span>1）种质资源群体重测序及SNP的开发。<span>
-																<span>2）种质资源群体遗传学、进化分析及与性状结合的GWAS研究。<span>
+																<span>1）种质资源群体重测序及SNP标记位点检测。<span>
+																<span>2）种质资源群体遗传学、进化分析、与性状结合的GWAS、LDdacay及选择性清除研究。<span>
 																<span>3）基于RNA-seq的优异种质资源的功能基因挖掘。<span>
-																<span>4）细胞器基因组的组装，用于不育种质的研究、进化及资源的基因条形码。<span>
+																<span>4）细胞器基因组的组装，可用于不育种质的研究、群体进化分析及开发资种质资源的基因条形码。<span>
     
 															</p>
 															<p>
