--- a/index.html
+++ b/index.html
@@ -63,13 +63,12 @@
 												 </ul>
 											  </div>
 											  <div class="body">
-											    <p>
-														<span> In the past decade, bioinformatics has become an integral deciphering genomic	<span>
-														<span>1种质资源群体重测序及SNP标记位点检测。	<span>
-                                                                                                               	<span>2种质资源群体遗传学、进化分析、与性状结合的GWAS、LDdacay及选择性清除研究。	<span>
-                                                                                                                <span>3基于RNA-seq的优异种质资源的功能基因挖掘。	<span>
-                                                                                                                <span>4细胞器基因组的组装，可用于不育种质的研究、群体进化分析及开发资种质资源的基因条形码。<span>
-												                <span>Have fun with bioinfomatics <span>
+											                 <p> In the past decade, bioinformatics has become an integral deciphering genomic	</p>
+													 <p>1种质资源群体重测序及SNP标记位点检测。	</p>
+                                                                                                               	 <p>2种质资源群体遗传学、进化分析、与性状结合的GWAS、LDdacay及选择性清除研究。	</p>
+                                                                                                                 <p>3基于RNA-seq的优异种质资源的功能基因挖掘。	</p>
+                                                                                                                 <p>4细胞器基因组的组装，可用于不育种质的研究、群体进化分析及开发资种质资源的基因条形码。		</p>
+												                <p>Have fun with bioinfomatics 	</p>
 															
 												</p>
 											  </div>
