--- a/publication.html
+++ b/publication.html
@@ -2,7 +2,7 @@
 <!--  Website template by freewebsitetemplates.com  -->
 <html>
 <head>
-<title>Minimalistic Web Template</title>
+<title>Well come to the bioinfo era!</title>
 <meta charset="UTF-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <!--[if IE 6]>
