--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Minimalistic Web Template</title>
+	<title>Well come to the bioinfo era!</title>
 	<meta  charset="iso-8859-1" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<!--[if IE 6]>
@@ -73,7 +73,7 @@
 													      <a href="blog.html"><img src="images/cotton-flower2.jpg" width="132" height="132" alt="" title=""></a>
 													    <h2><a href="publication.html">Blog Title Number One</a></h2>
 														<p>
-																If you’re experiencing issues and concerns publication this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forum">on our forum</a> and meet other people in the community who share the same interests with you. 
+																If youâ€™re experiencing issues and concerns publication this website template, join the discussion <a href="http://www.freewebsitetemplates.com/forum">on our forum</a> and meet other people in the community who share the same interests with you. 
 														        
 														</p>
 														<a href="blog.html">read more &raquo;</a>
