--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,10 @@
 											    <ul>
 													<li>
 															<p>
-																<span>1）种质资源群体重测序及SNP标记位点检测。<span>
-																<span>2）种质资源群体遗传学、进化分析、与性状结合的GWAS、LDdacay及选择性清除研究。<span>
-																<span>3）基于RNA-seq的优异种质资源的功能基因挖掘。<span>
-																<span>4）细胞器基因组的组装，可用于不育种质的研究、群体进化分析及开发资种质资源的基因条形码。<span>
-    
+															<p> 1）种质资源群体重测序及SNP的开发， SNP阵列的过滤，杂合纯合度分析，基因组共线性比较及SV检测。  <p> 
+  <p> 2）种质资源群体遗传学，包括群体进化分析，LD-dacay，Selective-sweeping及与性状结合的GWAS研究。群体遗传学分析可用于检测在野生种质资源中特有的功能基因。  <p> 
+  <p> 3）基于RNA-seq的优异种质资源的功能基因挖掘。包括转录组Unigene组装，RPKM值评估，DEG差异表达分析，差异基因的富集,KEGG分析及生物学Pathway 构建。  <p> 
+  <p> 4）叶绿体，线粒体基因组的组装。线粒体基因组功能注释及基因组比对可开展种质资源的不育种质机理研究。而叶绿体基因组组装及比对可开展群体进化进化及资源的基因条形码研究。
 															</p>
 															<p>
 																 合作共赢，让生物信息学给农业科研插上腾飞的翅膀！
