--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
 															<span>山东省农业科学院，种质资源中心315室</span>
 															<span>山东济南，工业北路202号</span>
 															<span>邮编 250101</span>
-															<a href="contact.html"><span>Email：duannaibin@gmail.com</span></a>
+															<a href="contact.html"><span>Email：duannaibin@gmail.com & dnb_bioinfo@saas.ac.cn</span></a>
 													</li>
 												</ul>
 										     </div>
