--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ visits = 1
 else
 visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("您是第" + visits + "位访问本专题的！")
+document.write("You Are" + visits + "Visitor！")
 // -->
 </script>
 
