--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ visits = 1
 else
 visits = parseInt(visits) + 1
 setCookie("counter", visits, now)
-document.write("You Are" + visits + "Visitor！")
+document.write("Well come !  You Are the No" + visits + " Visitor！ ")
 // -->
 </script>
 
